main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>