main/default/objects/Survey_Question__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Question displayed in the survey</description>
    <label>Description</label>
    <length>12000</length>
    <type>Html</type>
</CustomField>