main/default/objects/Survey_Question__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>