main/default/objects/Survey_Question__c/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <label>Min Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>