main/default/objects/Survey_Question__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <inlineHelpText>For multi-select question, provide more than one choice and it should be on its own line.</inlineHelpText>
    <label>Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>