main/default/objects/Survey_Question__c/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <label>Question Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>