main/default/objects/Survey_Question__c/fields/Report_Category__c.field-meta.xml
<CustomField>
    <fullName>Report_Category__c</fullName>
    <label>Report Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>