main/default/objects/Survey_Question__c/fields/Required_Question__c.field-meta.xml
<CustomField>
    <fullName>Required_Question__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[Pamela Kiang 10082021 CCN-822] Determines whether this question will be required in the survey or not.</description>
    <label>Required Question</label>
    <type>Checkbox</type>
</CustomField>