main/default/objects/Survey_Question__c/validationRules/Multiselect_Question_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiselect_Question_Type_Validation</fullName>
    <active>true</active>
    <description>[Xen Reyes CCN-SUR-1454-DV] Checks the question type and requires option for multi-select question type.</description>
    <errorConditionFormula>IF(
    AND(
        ISPICKVAL(Question_Type__c, &quot;Multi-select&quot;),
        OR(
            NOT(REGEX( Options__c , &apos;(.*\r?\n.*)*&apos;)),
            ISBLANK(Options__c)
        )
    ),
    true,
    false
)</errorConditionFormula>
    <errorDisplayField>Options__c</errorDisplayField>
    <errorMessage>Multiple options are required for multi-select question.</errorMessage>
</ValidationRule>