main/default/objects/Survey_Question__c/validationRules/Range_Question_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Question_Type_Validation</fullName>
    <active>true</active>
    <description>[Pamela Kiang 10082021 CCN-822] Checks the question type and requires values for ranges</description>
    <errorConditionFormula>IF(
ISPICKVAL(Question_Type__c, &quot;Range&quot;),
OR(ISBLANK( Min_Value__c ), ISBLANK( Max_Value__c ), ISBLANK(  Step__c )),
false
)</errorConditionFormula>
    <errorMessage>Min Value, Max Value, and Step are required for Range questions</errorMessage>
</ValidationRule>